docs/7.56/md/abapconvert_key.md
---
title: "CONVERT KEY"
description: |
  Syntax CONVERT KEY OF bdef FROM TEMPORARY pre_key TO final_key. Effect This statement is only possible between COMMIT ENTITIES BEGIN, END(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapemlcommit_entities_late.htm). Syntax Part Details CONVERT KEY OF bdef. Specifies the RA
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapconvert_key.htm"
abapFile: "abapconvert_key.htm"
keywords: ["loop", "do", "if", "data", "types", "internal-table", "abapconvert", "key"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [ABAP for RAP Business Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_for_rap_bos.htm) →  [ABAP for Consuming RAP Business Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_consume_rap_bos.htm) →  [ABAP EML - Consuming RAP BOs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml.htm) →  [COMMIT ENTITIES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapcommit_entities.htm) →  [COMMIT ENTITIES BEGIN, END](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapemlcommit_entities_late.htm) → 

CONVERT KEY

Syntax

CONVERT KEY OF bdef
  FROM *\[*TEMPORARY*\]* pre\_key
  TO final\_key.

Effect

This statement is only possible between [COMMIT ENTITIES BEGIN, END](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapemlcommit_entities_late.htm).

Syntax Part

Details

CONVERT KEY OF bdef.

Specifies the RAP BO (bdef) for which the keys should be converted. In contrast to other EML statements, the CONVERT KEY OF statement does not operate on mass data, i. e. internal tables, but on single values (pre\_key, final\_key). The CONVERT KEY statement is only possible in this context.

FROM \[TEMPORARY\] pre\_key

Specifies the value of the preliminary key (pre\_key). The type of pre\_key must be compatible with the types of %pid, i. e. ABP\_BEHV\_PID, the key or ...-%pre. The keyword TEMPORARY is relevant if the variant [in place](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_late_numbering.htm) is used in the context of late numbering. Here, the regular %key fields (with the preliminary key values) - instead of %pid - are used for pre\_key for which the final key is retrieved via CONVERT KEY OF.

TO final\_key.

final\_key specifies the final key value. The type of final\_key must be compatible with the primary key's type.

Example

The following source code section taken from DEMO\_RAP\_EML\_COMMIT\_3 demonstrates the COMMIT ENTITIES BEGIN ... END variant and CONVERT KEY OF.

DATA: mapped\_early TYPE RESPONSE FOR MAPPED EARLY
        demo\_umanaged\_root\_late\_num.
COMMIT ENTITIES BEGIN.
  LOOP AT mapped\_early-demo\_umanaged\_root\_late\_num
    ASSIGNING FIELD-SYMBOL(<mapped\_early>).
    CONVERT KEY OF demo\_umanaged\_root\_late\_num
      FROM <mapped\_early>-%pid
      TO DATA(lv\_root\_key).
  ENDLOOP.
COMMIT ENTITIES END.

Executable Example

The example [COMMIT ENTITIES BEGIN, END with CONVERT KEY OF](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencommit_entities_beginend_abexa.htm) demonstrates the use of this COMMIT ENTITIES statement including CONVERT KEY OF.